--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@types/node": "^20.3.1",
     "eslint": "^8.43.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "gsap": "^3.12.1"
   }
 }
