--- a/package.json
+++ b/package.json
@@ -10,7 +10,5 @@
     "eslint": "^8.43.0",
     "typescript": "^5.1.3"
   },
-  "dependencies": {
-    "gsap": "^3.12.1"
-  }
+  "dependencies": {}
 }
