--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,38 @@
 {
     "compilerOptions": {
-        "target": "ES5",
-        "lib": [
-            "DOM.Iterable",
-            "DOM",
-            "ESNext",
-            "ESNext.Array",
-            "ES2019.Array"
+      "target": "ES5",
+      "lib": [
+        "DOM.Iterable",
+        "DOM",
+        "ESNext",
+        "ESNext.Array",
+        "ES2019.Array"
+      ],
+      "allowJs": true,
+      "noEmit": true,
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "preserve",
+      "incremental": true,
+      "module": "ES2020",
+      "rootDir": "./",
+      "moduleResolution": "node",
+      "paths": {
+        "*": [
+          "./src/*.d.ts"
         ],
-        "allowJs": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "incremental": true,
-        "module": "ES2020",
-        "rootDir": "./",
-        "moduleResolution": "node",
-        "paths": {
-            "*": ["./src/*.d.ts"],
-            "@/*": ["./src/*"]
-        },
-        "outDir": "./src/build",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitAny": true,
-        "alwaysStrict": true,
-        "skipLibCheck": true,
-        "removeComments": true
+        "@/*": [
+          "./src/*"
+        ]
+      },
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "noImplicitAny": true,
+      "alwaysStrict": true,
+      "skipLibCheck": true
     },
-    "include": ["**/*.ts"],
+    "include": ["**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
-}
+  }
+  
